# haskell-vs-rust-regex-benchmark

./: .gitignore  README.md
regex-hs/: package.yaml  regex-hs.cabal
regex-hs/app/: Main.hs
regex-hs/benches/: Main.hs
regex-hs/src/: Lib.hs
regex-rs/: Cargo.toml
regex-rs/benches/: bench.rs
regex-rs/src/: lib.rs  main.rs
